# Neural-Field-Superres

./: .gitignore  README.md  environment.yaml  pyproject.toml
cluster_workflow/: benchmark_v3_compare.job  exp_nostatic_mse.job  exp_nostatic_nll.job  exp_static_mse.job  exp_static_nll.job  exp_static_nll_fast.job  setup_env.job  sweep_agent.job  sweep_static_nll.yaml  train_europe.job  train_scandinavia.job
cluster_workflow/slurm_outputs/: exp_nostatic_mse_17651284.err  exp_nostatic_mse_17651284.out  exp_nostatic_nll_17651291.err  exp_nostatic_nll_17651291.out  exp_static_mse_17651289.err  exp_static_mse_17651289.out  exp_static_nll_17651290.err  exp_static_nll_17651290.out  sweep_agent_17749497.err  sweep_agent_17749499.err  sweep_agent_17749501.err
config/: DECAP:default.yaml  default.yaml  default_europe.yaml  exp_encoder.yaml  exp_nostatic_mse.yaml  exp_nostatic_nll.yaml  exp_static_mse.yaml  exp_static_nll.yaml  exp_static_nll_fast.yaml
jobs/: train_scandinavia.job
scripts/: benchmark_dataload.py  compute_static_statistics.py  debug_gridded_knn.py  evaluate_interpolation.py  inspect_zarr_files.py  profile_model.py  train_random_forest.py  verify_pipeline.py  visualize_interpolation.py  visualize_random_forest.py
src/: layers.py  model.py  pos_emb.py  train.py
src/callbacks/: __init__.py  visualization.py
src/data/: __init__.py  datamodule.py  datamodule_with_enc.py  era_latent_hres_dataset.py  era_prediction_hres_dataset.py
src/model/: __init__.py  bi-inv.py  crps.py  data.py  layers.py  likelihoods.py  model.py  model_with_enc.py  module.py  (+3 more)
(+4 files in other folders)
